
# Changelog

1.7 (unreleased)
----------------

- Upgrade to seantis.dir.base 1.7.
  [href]

1.5.1
-----

- Shows council member address and information on directory view.
- Adds full-resolution link below image.

1.5
---

- Validator for image field.
- Attachement field added.
- Added compatiblity with seantis.dir.base 1.5

1.2a
----

- Initial release (version aligned with seantis.dir.base)